--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -19,11 +19,8 @@
     <properties>
         <incava.version>1.1.0</incava.version>
         <joda-time.version>1.6.2</joda-time.version>
-        <netbeans.version>RELEASE712-1</netbeans.version>
         <org.springframework.version>3.1.0.RELEASE</org.springframework.version>
         <uuid.version>2.1.5</uuid.version>
-        <tft.jsr330.version>1</tft.jsr330.version>
-        <tft.slf4j.version>1.6.1</tft.slf4j.version>
         <tft.UmlGraphDoc.additionalParam>-views -attributes -operations -types -postfixpackage -nodefontpackagesize 6 -nodefontclasssize 8 -nodefontsize 7 -edgefontsize 7 -nodesep 0.05 -ranksep 0.1 -visibility -inferrel -hide java.*|javax.*</tft.UmlGraphDoc.additionalParam>
 
         <tft.javac.source>1.7</tft.javac.source> <!-- For Android compatibility -->
@@ -38,11 +35,6 @@
                 <version>${javax-annotation.version}</version>
             </dependency>
             <dependency>
-                <groupId>javax.inject</groupId>
-                <artifactId>javax.inject</artifactId>
-                <version>${tft.jsr330.version}</version>
-            </dependency>
-            <dependency>
                 <groupId>com.eaio</groupId>
                 <artifactId>uuid</artifactId>
                 <version>${uuid.version}</version>
@@ -54,73 +46,10 @@
             </dependency>
 
             <dependency>
-                <groupId>com.google.code.findbugs</groupId>
-                <artifactId>annotations</artifactId>
-                <version>${tft.jsr305.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>it.tidalwave.superpom</groupId>
-                <artifactId>platform</artifactId>
-                <version>${netbeans.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-
-            <dependency>
-                <groupId>org.springframework</groupId>
-                <artifactId>spring-beans</artifactId>
-                <version>${org.springframework.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework</groupId>
-                <artifactId>spring-aspects</artifactId>
-                <version>${org.springframework.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework</groupId>
-                <artifactId>spring-context</artifactId>
-                <version>${org.springframework.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework</groupId>
-                <artifactId>spring-core</artifactId>
-                <version>${org.springframework.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.aspectj</groupId>
-                <artifactId>aspectjrt</artifactId>
-                <version>${tft.aspectjrt.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.aspectj</groupId>
-                <artifactId>aspectjweaver</artifactId>
-                <version>${tft.aspectjrt.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.slf4j</groupId>
-                <artifactId>slf4j-api</artifactId>
-                <version>${tft.slf4j.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.slf4j</groupId>
-                <artifactId>jcl-over-slf4j</artifactId>
-                <version>${tft.slf4j.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>ch.qos.logback</groupId>
-                <artifactId>logback-classic</artifactId>
-                <version>${tft.logback.version}</version>
-            </dependency>
-
-            <dependency>
                 <groupId>org.incava</groupId>
                 <artifactId>org.incava.util.diff</artifactId>
                 <version>${incava.version}</version>
             </dependency>
-
 
             <!-- FIXME: used as provided dependency in some modules to work around a javadoc crash -->
             <dependency>
@@ -128,6 +57,21 @@
                 <artifactId>commons-logging</artifactId>
                 <version>1.2</version>
             </dependency>
+
+            <!-- FIXME: push to SuperPOM -->
+            <dependency>
+                <groupId>org.testng</groupId>
+                <artifactId>testng</artifactId>
+                <scope>test</scope>
+                <version>${tft.testng.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.hamcrest</groupId>
+                <artifactId>hamcrest-all</artifactId>
+                <version>${tft.hamcrest-matchers.version}</version>
+                <scope>test</scope>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
@@ -166,7 +110,7 @@
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
-            <artifactId>mockito-all</artifactId>
+            <artifactId>mockito-core</artifactId>
             <scope>test</scope>
         </dependency>
 
@@ -202,6 +146,30 @@
                         </property>
                     </properties>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-enforcer-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>enforce-banned-dependencies</id>
+                        <goals>
+                            <goal>enforce</goal>
+                        </goals>
+                        <configuration>
+                            <rules>
+                                <bannedDependencies>
+                                    <excludes>
+                                        <exclude>commons-logging:commons-logging</exclude>
+                                        <exclude>org.aspectj:aspectjweaver</exclude>
+                                        <exclude>com.kenai.nbpwr:org-slf4j-jdk14</exclude>
+                                    </excludes>
+                                </bannedDependencies>
+                            </rules>
+                            <fail>true</fail>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
