--- a/modules/SpringRoles/pom.xml
+++ b/modules/SpringRoles/pom.xml
@@ -6,13 +6,13 @@
     <parent>
        <groupId>it.tidalwave.thesefoolishthings</groupId>
         <artifactId>modules</artifactId>
-        <version>3.1-ALPHA-2-SNAPSHOT</version>
+        <version>3.1-ALPHA-2</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <groupId>it.tidalwave.thesefoolishthings</groupId>
     <artifactId>it-tidalwave-role-spring</artifactId>
-    <version>3.1-ALPHA-2-SNAPSHOT</version>
+    <version>3.1-ALPHA-2</version>
     <packaging>jar</packaging>
     <name>TheseFoolishThings - Roles (Spring)</name>
     <description>Specific Spring support for DCI roles</description>
