--- a/modules/Utilities/pom.xml
+++ b/modules/Utilities/pom.xml
@@ -6,13 +6,13 @@
     <parent>
         <groupId>it.tidalwave.thesefoolishthings</groupId>
         <artifactId>modules</artifactId>
-        <version>3.1-ALPHA-2-SNAPSHOT</version>
+        <version>3.1-ALPHA-2</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <groupId>it.tidalwave.thesefoolishthings</groupId>
     <artifactId>it-tidalwave-util</artifactId>
-    <version>3.1-ALPHA-2-SNAPSHOT</version>
+    <version>3.1-ALPHA-2</version>
     <packaging>jar</packaging>
     <name>TheseFoolishThings - Utilities</name>
 
