--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,10 @@ Since version 3.0 lots of old stuff have been dropped:
 
         <tft.maven.requiredJdk>[1.8.0-0,)</tft.maven.requiredJdk>
 
+        <tft.javax-annotation.version>1.3.2</tft.javax-annotation.version>
+        <tft.jsr305.version>3.0.2</tft.jsr305.version>
+        <tft.findbugs-annotations.version>3.1.9</tft.findbugs-annotations.version>
+
         <netbeans.hint.jdkPlatform>JDK_1.8.0</netbeans.hint.jdkPlatform>
         <netbeans.compile.on.save>all</netbeans.compile.on.save>
 
