[maven-release-plugin] prepare release 3.1-ALPHA-3

--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <groupId>it.tidalwave.thesefoolishthings</groupId>
     <artifactId>thesefoolishthings</artifactId>
     <packaging>pom</packaging>
-    <version>3.1-ALPHA-3-SNAPSHOT</version>
+    <version>3.1-ALPHA-3</version>
     <name>TheseFoolishThings</name>
     <inceptionYear>2009</inceptionYear>
     <url>http://thesefoolishthings.tidalwave.it</url>
@@ -61,7 +61,7 @@ Since version 3.0 lots of old stuff have been dropped:
         <connection>scm:git:${scm.repo.readonly.url}</connection>
         <developerConnection>scm:git:${scm.repo.effective.url}</developerConnection>
         <url>${scm.repo.browse.url}</url>
-      <tag>HEAD</tag>
+      <tag>3.1-ALPHA-3</tag>
     </scm>
 
     <dependencyManagement>
@@ -69,28 +69,28 @@ Since version 3.0 lots of old stuff have been dropped:
             <dependency>
                 <groupId>it.tidalwave.thesefoolishthings</groupId>
                 <artifactId>it-tidalwave-actor</artifactId>
-                <version>3.1-ALPHA-3-SNAPSHOT</version>
+                <version>3.1-ALPHA-3</version>
             </dependency>
             <dependency>
                 <groupId>it.tidalwave.thesefoolishthings</groupId>
                 <artifactId>it-tidalwave-util</artifactId>
-                <version>3.1-ALPHA-3-SNAPSHOT</version>
+                <version>3.1-ALPHA-3</version>
             </dependency>
             <dependency>
                 <groupId>it.tidalwave.thesefoolishthings</groupId>
                 <artifactId>it-tidalwave-util</artifactId>
-                <version>3.1-ALPHA-3-SNAPSHOT</version>
+                <version>3.1-ALPHA-3</version>
                 <classifier>tests</classifier>
             </dependency>
             <dependency>
                 <groupId>it.tidalwave.thesefoolishthings</groupId>
                 <artifactId>it-tidalwave-role</artifactId>
-                <version>3.1-ALPHA-3-SNAPSHOT</version>
+                <version>3.1-ALPHA-3</version>
             </dependency>
             <dependency>
                 <groupId>it.tidalwave.thesefoolishthings</groupId>
                 <artifactId>it-tidalwave-role</artifactId>
-                <version>3.1-ALPHA-3-SNAPSHOT</version>
+                <version>3.1-ALPHA-3</version>
                 <classifier>tests</classifier>
             </dependency>
             <dependency>
@@ -101,80 +101,80 @@ Since version 3.0 lots of old stuff have been dropped:
             <dependency>
                 <groupId>it.tidalwave.thesefoolishthings</groupId>
                 <artifactId>it-tidalwave-util-test</artifactId>
-                <version>3.1-ALPHA-3-SNAPSHOT</version>
+                <version>3.1-ALPHA-3</version>
             </dependency>
             <dependency>
                 <groupId>it.tidalwave.thesefoolishthings</groupId>
                 <artifactId>it-tidalwave-messagebus</artifactId>
-                <version>3.1-ALPHA-3-SNAPSHOT</version>
+                <version>3.1-ALPHA-3</version>
             </dependency>
             <dependency>
                 <groupId>it.tidalwave.thesefoolishthings</groupId>
                 <artifactId>it-tidalwave-messagebus</artifactId>
-                <version>3.1-ALPHA-3-SNAPSHOT</version>
+                <version>3.1-ALPHA-3</version>
                 <classifier>tests</classifier>
             </dependency>
             <dependency>
                 <groupId>it.tidalwave.thesefoolishthings</groupId>
                 <artifactId>it-tidalwave-messagebus-spring</artifactId>
-                <version>3.1-ALPHA-3-SNAPSHOT</version>
+                <version>3.1-ALPHA-3</version>
             </dependency>
             <dependency>
                 <groupId>it.tidalwave.thesefoolishthings</groupId>
                 <artifactId>it-tidalwave-role-spring</artifactId>
-                <version>3.1-ALPHA-3-SNAPSHOT</version>
+                <version>3.1-ALPHA-3</version>
             </dependency>
             <dependency>
                 <groupId>it.tidalwave.thesefoolishthings</groupId>
                 <artifactId>it-tidalwave-util-java8supplement</artifactId>
-                <version>3.1-ALPHA-3-SNAPSHOT</version>
+                <version>3.1-ALPHA-3</version>
             </dependency>
             <dependency>
                 <groupId>it.tidalwave.thesefoolishthings</groupId>
                 <artifactId>it-tidalwave-util-java8supplement</artifactId>
                 <classifier>tests</classifier>
-                <version>3.1-ALPHA-3-SNAPSHOT</version>
+                <version>3.1-ALPHA-3</version>
             </dependency>
 
             <dependency>
                 <groupId>it.tidalwave.thesefoolishthings</groupId>
                 <artifactId>it-tidalwave-thesefoolishthings-examples-data</artifactId>
-                <version>3.1-ALPHA-3-SNAPSHOT</version>
+                <version>3.1-ALPHA-3</version>
             </dependency>
             <dependency>
                 <groupId>it.tidalwave.thesefoolishthings</groupId>
                 <artifactId>it-tidalwave-thesefoolishthings-examples-dci-displayable</artifactId>
-                <version>3.1-ALPHA-3-SNAPSHOT</version>
+                <version>3.1-ALPHA-3</version>
             </dependency>
             <dependency>
                 <groupId>it.tidalwave.thesefoolishthings</groupId>
                 <artifactId>it-tidalwave-thesefoolishthings-examples-dci-marshal-xstream</artifactId>
-                <version>3.1-ALPHA-3-SNAPSHOT</version>
+                <version>3.1-ALPHA-3</version>
             </dependency>
             <dependency>
                 <groupId>it.tidalwave.thesefoolishthings</groupId>
                 <artifactId>it-tidalwave-thesefoolishthings-examples-dci-persistence-jpa</artifactId>
-                <version>3.1-ALPHA-3-SNAPSHOT</version>
+                <version>3.1-ALPHA-3</version>
             </dependency>
             <dependency>
                 <groupId>it.tidalwave.thesefoolishthings</groupId>
                 <artifactId>it-tidalwave-thesefoolishthings-examples-dci-swing</artifactId>
-                <version>3.1-ALPHA-3-SNAPSHOT</version>
+                <version>3.1-ALPHA-3</version>
             </dependency>
             <dependency>
                 <groupId>it.tidalwave.thesefoolishthings</groupId>
                 <artifactId>it-tidalwave-thesefoolishthings-examples-finderexample1</artifactId>
-                <version>3.1-ALPHA-3-SNAPSHOT</version>
+                <version>3.1-ALPHA-3</version>
             </dependency>
             <dependency>
                 <groupId>it.tidalwave.thesefoolishthings</groupId>
                 <artifactId>it-tidalwave-thesefoolishthings-examples-finderexample2</artifactId>
-                <version>3.1-ALPHA-3-SNAPSHOT</version>
+                <version>3.1-ALPHA-3</version>
             </dependency>
             <dependency>
                 <groupId>it.tidalwave.thesefoolishthings</groupId>
                 <artifactId>it-tidalwave-thesefoolishthings-examples-finderexample3</artifactId>
-                <version>3.1-ALPHA-3-SNAPSHOT</version>
+                <version>3.1-ALPHA-3</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
