--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
 
@@ -7,7 +8,7 @@
         <groupId>it.tidalwave.superpom</groupId>
         <artifactId>superpom</artifactId>
         <version>4.14</version>
-        <relativePath />
+        <relativePath/>
     </parent>
 
     <groupId>it.tidalwave.thesefoolishthings</groupId>
@@ -18,22 +19,22 @@
     <inceptionYear>2009</inceptionYear>
     <url>http://thesefoolishthings.tidalwave.it</url>
     <description>
-A kitchen sink of small libraries that are used by all projects by Tidalwave. It mostly contains:
+        A kitchen sink of small libraries that are used by all projects by Tidalwave. It mostly contains:
 
-* a few generic stuff such as ```Id``` and ```IdFactory```;
-* the ```Finder``` API for fluent query builders;
-* support for the DCI pattern (Data Context and Interaction), with optional Spring integration;
-* a tiny but functional local Message Bus, with optional Spring integration;
-* a small, experimental Actor library;
-* some test utilities.
+        * a few generic stuff such as ```Id``` and ```IdFactory```;
+        * the ```Finder``` API for fluent query builders;
+        * support for the DCI pattern (Data Context and Interaction), with optional Spring integration;
+        * a tiny but functional local Message Bus, with optional Spring integration;
+        * a small, experimental Actor library;
+        * some test utilities.
 
-TheseFoolishThings supports JDK 7 and has got a small JDK 8 integration module.
+        TheseFoolishThings supports JDK 7 and has got a small JDK 8 integration module.
 
-Since version 3.0 lots of old stuff have been dropped:
+        Since version 3.0 lots of old stuff have been dropped:
 
-* Support for Swing.
-* Support for the NetBeans Platform.
-* A very small support library for Vaadin.
+        * Support for Swing.
+        * Support for the NetBeans Platform.
+        * A very small support library for Vaadin.
     </description>
 
     <properties>
@@ -57,7 +58,7 @@ Since version 3.0 lots of old stuff have been dropped:
         <connection>scm:git:${scm.repo.readonly.url}</connection>
         <developerConnection>scm:git:${scm.repo.effective.url}</developerConnection>
         <url>${scm.repo.browse.url}</url>
-      <tag>HEAD</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <dependencyManagement>
@@ -182,7 +183,7 @@ Since version 3.0 lots of old stuff have been dropped:
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <configuration>
                     <links>
-                        <link href="http://java.sun.com/javase/7/docs/api/" />
+                        <link href="http://java.sun.com/javase/7/docs/api/"/>
                     </links>
                 </configuration>
             </plugin>
