--- a/modules/Java8Supplements/pom.xml
+++ b/modules/Java8Supplements/pom.xml
@@ -89,4 +89,20 @@
         </dependency>
     </dependencies>
 
+    <profiles>
+        <profile>
+            <id>thesefoolishthings-javafx</id>
+            <activation>
+                <jdk>[11,)</jdk>
+            </activation>
+            <dependencies>
+                <dependency>
+                    <groupId>org.openjfx</groupId>
+                    <artifactId>javafx-base</artifactId>
+                    <scope>provided</scope>
+                </dependency>
+             </dependencies>
+        </profile>
+    </profiles>
+
 </project>
