--- a/modules/Java8Supplements/pom.xml
+++ b/modules/Java8Supplements/pom.xml
@@ -26,22 +26,21 @@
   *********************************************************************************************************************
   #L%
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
         <groupId>it.tidalwave.thesefoolishthings</groupId>
         <artifactId>modules</artifactId>
-        <version>3.1-ALPHA-7-SNAPSHOT</version>
+        <version>3.1-ALPHA-7</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <groupId>it.tidalwave.thesefoolishthings</groupId>
     <artifactId>it-tidalwave-util-java8supplement</artifactId>
     <packaging>jar</packaging>
-    <version>3.1-ALPHA-7-SNAPSHOT</version>
+    <version>3.1-ALPHA-7</version>
     <name>TheseFoolishThings - Java 8 Supplements</name>
 
     <properties>
