--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
 
@@ -8,13 +7,13 @@
         <groupId>it.tidalwave.superpom</groupId>
         <artifactId>superpom</artifactId>
         <version>4.15</version>
-        <relativePath/>
+        <relativePath />
     </parent>
 
     <groupId>it.tidalwave.thesefoolishthings</groupId>
     <artifactId>thesefoolishthings</artifactId>
     <packaging>pom</packaging>
-    <version>3.1-ALPHA-7-SNAPSHOT</version>
+    <version>3.1-ALPHA-7</version>
     <name>TheseFoolishThings</name>
     <inceptionYear>2009</inceptionYear>
     <url>http://thesefoolishthings.tidalwave.it</url>
@@ -55,7 +54,7 @@
         <connection>scm:git:${scm.repo.readonly.url}</connection>
         <developerConnection>scm:git:${scm.repo.effective.url}</developerConnection>
         <url>${scm.repo.browse.url}</url>
-        <tag>HEAD</tag>
+        <tag>3.1-ALPHA-7</tag>
     </scm>
 
     <dependencyManagement>
@@ -63,28 +62,28 @@
             <dependency>
                 <groupId>it.tidalwave.thesefoolishthings</groupId>
                 <artifactId>it-tidalwave-actor</artifactId>
-                <version>3.1-ALPHA-7-SNAPSHOT</version>
+                <version>3.1-ALPHA-7</version>
             </dependency>
             <dependency>
                 <groupId>it.tidalwave.thesefoolishthings</groupId>
                 <artifactId>it-tidalwave-util</artifactId>
-                <version>3.1-ALPHA-7-SNAPSHOT</version>
+                <version>3.1-ALPHA-7</version>
             </dependency>
             <dependency>
                 <groupId>it.tidalwave.thesefoolishthings</groupId>
                 <artifactId>it-tidalwave-util</artifactId>
-                <version>3.1-ALPHA-7-SNAPSHOT</version>
+                <version>3.1-ALPHA-7</version>
                 <classifier>tests</classifier>
             </dependency>
             <dependency>
                 <groupId>it.tidalwave.thesefoolishthings</groupId>
                 <artifactId>it-tidalwave-role</artifactId>
-                <version>3.1-ALPHA-7-SNAPSHOT</version>
+                <version>3.1-ALPHA-7</version>
             </dependency>
             <dependency>
                 <groupId>it.tidalwave.thesefoolishthings</groupId>
                 <artifactId>it-tidalwave-role</artifactId>
-                <version>3.1-ALPHA-7-SNAPSHOT</version>
+                <version>3.1-ALPHA-7</version>
                 <classifier>tests</classifier>
             </dependency>
             <dependency>
@@ -95,80 +94,80 @@
             <dependency>
                 <groupId>it.tidalwave.thesefoolishthings</groupId>
                 <artifactId>it-tidalwave-util-test</artifactId>
-                <version>3.1-ALPHA-7-SNAPSHOT</version>
+                <version>3.1-ALPHA-7</version>
             </dependency>
             <dependency>
                 <groupId>it.tidalwave.thesefoolishthings</groupId>
                 <artifactId>it-tidalwave-messagebus</artifactId>
-                <version>3.1-ALPHA-7-SNAPSHOT</version>
+                <version>3.1-ALPHA-7</version>
             </dependency>
             <dependency>
                 <groupId>it.tidalwave.thesefoolishthings</groupId>
                 <artifactId>it-tidalwave-messagebus</artifactId>
-                <version>3.1-ALPHA-7-SNAPSHOT</version>
+                <version>3.1-ALPHA-7</version>
                 <classifier>tests</classifier>
             </dependency>
             <dependency>
                 <groupId>it.tidalwave.thesefoolishthings</groupId>
                 <artifactId>it-tidalwave-messagebus-spring</artifactId>
-                <version>3.1-ALPHA-7-SNAPSHOT</version>
+                <version>3.1-ALPHA-7</version>
             </dependency>
             <dependency>
                 <groupId>it.tidalwave.thesefoolishthings</groupId>
                 <artifactId>it-tidalwave-role-spring</artifactId>
-                <version>3.1-ALPHA-7-SNAPSHOT</version>
+                <version>3.1-ALPHA-7</version>
             </dependency>
             <dependency>
                 <groupId>it.tidalwave.thesefoolishthings</groupId>
                 <artifactId>it-tidalwave-util-java8supplement</artifactId>
-                <version>3.1-ALPHA-7-SNAPSHOT</version>
+                <version>3.1-ALPHA-7</version>
             </dependency>
             <dependency>
                 <groupId>it.tidalwave.thesefoolishthings</groupId>
                 <artifactId>it-tidalwave-util-java8supplement</artifactId>
                 <classifier>tests</classifier>
-                <version>3.1-ALPHA-7-SNAPSHOT</version>
+                <version>3.1-ALPHA-7</version>
             </dependency>
 
             <dependency>
                 <groupId>it.tidalwave.thesefoolishthings</groupId>
                 <artifactId>it-tidalwave-thesefoolishthings-examples-data</artifactId>
-                <version>3.1-ALPHA-7-SNAPSHOT</version>
+                <version>3.1-ALPHA-7</version>
             </dependency>
             <dependency>
                 <groupId>it.tidalwave.thesefoolishthings</groupId>
                 <artifactId>it-tidalwave-thesefoolishthings-examples-dci-displayable</artifactId>
-                <version>3.1-ALPHA-7-SNAPSHOT</version>
+                <version>3.1-ALPHA-7</version>
             </dependency>
             <dependency>
                 <groupId>it.tidalwave.thesefoolishthings</groupId>
                 <artifactId>it-tidalwave-thesefoolishthings-examples-dci-marshal-xstream</artifactId>
-                <version>3.1-ALPHA-7-SNAPSHOT</version>
+                <version>3.1-ALPHA-7</version>
             </dependency>
             <dependency>
                 <groupId>it.tidalwave.thesefoolishthings</groupId>
                 <artifactId>it-tidalwave-thesefoolishthings-examples-dci-persistence-jpa</artifactId>
-                <version>3.1-ALPHA-7-SNAPSHOT</version>
+                <version>3.1-ALPHA-7</version>
             </dependency>
             <dependency>
                 <groupId>it.tidalwave.thesefoolishthings</groupId>
                 <artifactId>it-tidalwave-thesefoolishthings-examples-dci-swing</artifactId>
-                <version>3.1-ALPHA-7-SNAPSHOT</version>
+                <version>3.1-ALPHA-7</version>
             </dependency>
             <dependency>
                 <groupId>it.tidalwave.thesefoolishthings</groupId>
                 <artifactId>it-tidalwave-thesefoolishthings-examples-finderexample1</artifactId>
-                <version>3.1-ALPHA-7-SNAPSHOT</version>
+                <version>3.1-ALPHA-7</version>
             </dependency>
             <dependency>
                 <groupId>it.tidalwave.thesefoolishthings</groupId>
                 <artifactId>it-tidalwave-thesefoolishthings-examples-finderexample2</artifactId>
-                <version>3.1-ALPHA-7-SNAPSHOT</version>
+                <version>3.1-ALPHA-7</version>
             </dependency>
             <dependency>
                 <groupId>it.tidalwave.thesefoolishthings</groupId>
                 <artifactId>it-tidalwave-thesefoolishthings-examples-finderexample3</artifactId>
-                <version>3.1-ALPHA-7-SNAPSHOT</version>
+                <version>3.1-ALPHA-7</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
