--- a/modules/examples/DciPersistenceJpaExample/pom.xml
+++ b/modules/examples/DciPersistenceJpaExample/pom.xml
@@ -13,6 +13,9 @@
     <artifactId>it-tidalwave-thesefoolishthings-examples-dci-persistence-jpa</artifactId>
     <version>3.2-ALPHA-2-SNAPSHOT</version>
     <name>TheseFoolishThings Examples - DCI Persistence JPA</name>
+    <description>
+        An example of how persistence can be integrated by means of Roles.
+    </description>
 
     <properties>
         <mainClass>it.tidalwave.thesefoolishthings.examples.dci.persistable.jpa.Main</mainClass>
