--- a/modules/examples/DciSwingExample/pom.xml
+++ b/modules/examples/DciSwingExample/pom.xml
@@ -13,6 +13,9 @@
     <artifactId>it-tidalwave-thesefoolishthings-examples-dci-swing</artifactId>
     <version>3.2-ALPHA-2-SNAPSHOT</version>
     <name>TheseFoolishThings Examples - DCI Swing</name>
+    <description>
+        An example of how DCI roles can be used for a Swing application (obsolete stuff).
+    </description>
 
     <properties>
         <mainClass>it.tidalwave.thesefoolishthings.examples.dci.swing.Main</mainClass>
