--- a/modules/Roles/pom.xml
+++ b/modules/Roles/pom.xml
@@ -14,6 +14,10 @@
     <version>3.2-ALPHA-2-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>TheseFoolishThings - Roles</name>
+    <description>
+        Roles are a powerful way for designing complex behaviours while keeping good practices such as Single Responsibility, Dependency Inversion and
+        Interface Segregation.
+    </description>
 
     <properties>
         <stableAPI>false</stableAPI>
