--- a/modules/Utilities/pom.xml
+++ b/modules/Utilities/pom.xml
@@ -14,6 +14,9 @@
     <version>3.2-ALPHA-2-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>TheseFoolishThings - Utilities</name>
+    <description>
+        A collection of commmon utilities.
+    </description>
 
     <properties>
         <stableAPI>true</stableAPI>
@@ -26,10 +29,6 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
-        <!--        <dependency>
-                    <groupId>ch.qos.logback</groupId>
-                    <artifactId>logback-classic</artifactId>
-                </dependency>-->
     </dependencies>
 
 </project>
