--- a/modules/examples/DciMarshalXStreamExample/pom.xml
+++ b/modules/examples/DciMarshalXStreamExample/pom.xml
@@ -13,6 +13,9 @@
     <artifactId>it-tidalwave-thesefoolishthings-examples-dci-marshal-xstream</artifactId>
     <version>3.2-ALPHA-2-SNAPSHOT</version>
     <name>TheseFoolishThings Examples - DCI Marshal XStream</name>
+    <description>
+        An example of how XStream can be integrated by means of Roles.
+    </description>
 
     <properties>
         <mainClass>it.tidalwave.thesefoolishthings.examples.dci.marshal.xstream.Main</mainClass>
