--- a/modules/examples/FinderExample1/pom.xml
+++ b/modules/examples/FinderExample1/pom.xml
@@ -13,6 +13,9 @@
     <artifactId>it-tidalwave-thesefoolishthings-examples-finderexample1</artifactId>
     <version>3.2-ALPHA-2-SNAPSHOT</version>
     <name>TheseFoolishThings Examples - Finder Example 1</name>
+    <description>
+        A simple example of Finder usage.
+    </description>
 
     <dependencies>
         <dependency>
