--- a/modules/examples/FinderExample2/pom.xml
+++ b/modules/examples/FinderExample2/pom.xml
@@ -13,6 +13,9 @@
     <artifactId>it-tidalwave-thesefoolishthings-examples-finderexample2</artifactId>
     <version>3.2-ALPHA-2-SNAPSHOT</version>
     <name>TheseFoolishThings Examples - Finder Example 2</name>
+    <description>
+        A more complex example of Finder usage.
+    </description>
 
     <dependencies>
         <dependency>
