--- a/modules/examples/FinderExample3/pom.xml
+++ b/modules/examples/FinderExample3/pom.xml
@@ -13,6 +13,9 @@
     <artifactId>it-tidalwave-thesefoolishthings-examples-finderexample3</artifactId>
     <version>3.2-ALPHA-2-SNAPSHOT</version>
     <name>TheseFoolishThings Examples - Finder Example 3</name>
+    <description>
+        An example of Finder integration with JPA.
+    </description>
 
     <dependencies>
         <dependency>
