Updated archetype files.

--- a/archetypes/project/src/main/resources/archetype-resources/modules/pom.xml
+++ b/archetypes/project/src/main/resources/archetype-resources/modules/pom.xml
@@ -60,15 +60,24 @@
 
     ================================================================================================================ -->
     <properties>
+        <tft.maven.requiredJdk>[1.8)</tft.maven.requiredJdk>
+        <tft.javac.source>1.8</tft.javac.source>
+        <tft.javac.target>1.8</tft.javac.target>
 
-        <!-- thesefoolishthings.version>1.28</thesefoolishthings.version -->
-        <!-- netbeans.version>RELEASE72</netbeans.version -->
         <slf4j.version>1.7.5</slf4j.version>
         <logback.version>1.0.12</logback.version>
         <tft.jsr305.version>2.0.1</tft.jsr305.version>
         <tft.jsr330.version>1</tft.jsr330.version>
         <tft.lombok.version>0.11.6</tft.lombok.version>
         <tft.mockito.version>1.8.5</tft.mockito.version>
+
+        <!--
+        <tft.test.maxMemory>1024M</tft.test.maxMemory>
+        <tft.test.listeners>it.tidalwave.util.test.TestLogger</tft.test.listeners>
+        -->
+
+        <!-- thesefoolishthings.version>1.28</thesefoolishthings.version -->
+        <!-- netbeans.version>RELEASE72</netbeans.version -->
     </properties>
 
     <!-- ===============================================================================================================
