--- a/archetypes/project/src/main/resources/archetype-resources/pom.xml
+++ b/archetypes/project/src/main/resources/archetype-resources/pom.xml
@@ -35,7 +35,7 @@
     <parent>
         <groupId>it.tidalwave.thesefoolishthings</groupId>
         <artifactId>superpom</artifactId>
-        <version>2.12</version> 
+        <version>5.0-ALPHA-4</version>
         <relativePath/>
     </parent>
 
@@ -64,11 +64,7 @@
         
     ================================================================================================================ -->
     <properties>
-        <!-- Java.net
-        <tft.project.url>http://${projectName.toLowerCase()}.${forgeName}</tft.project.url>
-        -->
-        
-        <!-- BitBucket.org 
+        <!-- BitBucket.org
         <tft.project.url>http://bitbucket.org/${organizationName.toLowerCase()}/${rootArtifactId}</tft.project.url>
         -->
         
@@ -77,34 +73,10 @@
         
         <!--<tft.project.description>TODO: project description</tft.project.description>-->
 
-        <!-- Java.Net Mercurial setting 
-        <scm.repo.url>https://${forgeName.toLowerCase()}/hg/${rootArtifactId}~src</scm.repo.url>
-        <scm.repo.readonly.url>http://${forgeName}/hg/${rootArtifactId}~src</scm.repo.readonly.url>
-        <scm.repo.browse.url>http://${forgeName}/projects/${rootArtifactId}/sources/src/show</scm.repo.browse.url>
-        -->
-        
-        <!-- For Git 
-        <tft.scm>git</tft.scm>
-        -->
-        
-        <!-- BitBucket.org Mercurial setting  
+        <!-- BitBucket.org
         <scm.repo.url>ssh://hg@bitbucket.org/${organizationName.toLowerCase()}/${rootArtifactId}-src</scm.repo.url>
         <scm.repo.readonly.url>http://bitbucket.org/${organizationName.toLowerCase()}/${rootArtifactId}-src</scm.repo.readonly.url>
         <scm.repo.browse.url>http://bitbucket.org/${organizationName.toLowerCase()}/${rootArtifactId}/src</scm.repo.browse.url>
-        -->
-
-        <tft.maven.requiredJdk>[1.8)</tft.maven.requiredJdk>
-        <tft.javac.source>1.8</tft.javac.source>
-        <tft.javac.target>1.8</tft.javac.target>
-
-        <!--
-        <tft.test.maxMemory>1024M</tft.test.maxMemory>
-        <tft.test.listeners>it.tidalwave.util.test.TestLogger</tft.test.listeners>
-        -->
-
-        <!--
-        <tft.UmlGraphDoc.version>5.4</tft.UmlGraphDoc.version>
-        <tft.UmlGraphDoc.additionalParam>-views -attributes -operations -types -postfixpackage -nodefontpackagesize 6 -nodefontclasssize 8 -nodefontsize 7 -edgefontsize 7 -nodesep 0.05 -ranksep 0.1 -visibility -inferdep -inferrel -inferdepinpackage -hide java.*|javax.*|android.*</tft.UmlGraphDoc.additionalParam>
         -->
     </properties>
 
@@ -166,17 +138,19 @@
             <name>Sonatype Releases Repository</name>
             <url>http://oss.sonatype.org/content/repositories/releases/</url>
         </repository>
-        <repository>
-            <id>snapshots-oss.sonatype.org</id>
-            <name>Sonatype Snapshots Repository</name>
-            <url>http://oss.sonatype.org/content/repositories/snapshots/</url>
-            <releases>
-                <enabled>false</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
+        <!--
+            <repository>
+                <id>snapshots-oss.sonatype.org</id>
+                <name>Sonatype Snapshots Repository</name>
+                <url>http://oss.sonatype.org/content/repositories/snapshots/</url>
+                <releases>
+                    <enabled>false</enabled>
+                </releases>
+                <snapshots>
+                    <enabled>true</enabled>
+                </snapshots>
+            </repository>
+        -->
     </repositories>
 
     <!-- ===============================================================================================================
