[maven-release-plugin] prepare for next development iteration

--- a/archetypes/project/pom.xml
+++ b/archetypes/project/pom.xml
@@ -5,13 +5,13 @@
     <parent>
         <groupId>it.tidalwave.thesefoolishthings</groupId>
         <artifactId>thesefoolishthings</artifactId>
-        <version>3.2-ALPHA-7</version>
+        <version>3.2-ALPHA-8-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
     <groupId>it.tidalwave.thesefoolishthings</groupId>
     <artifactId>project-archetype</artifactId>
-    <version>3.2-ALPHA-7</version>
+    <version>3.2-ALPHA-8-SNAPSHOT</version>
     <packaging>maven-archetype</packaging>
     <name>TheseFoolishThings - Project Archetype</name>
     <description>TheseFoolishThings - Project Archetype</description>
